change brezier curve of animation; add code snippet to index page; fix whitespace irregularty in main.js

--- a/projects/gallery/scss/main.scss
+++ b/projects/gallery/scss/main.scss
@@ -36,7 +36,7 @@ p {
 
 .description {
   margin: 0 auto;
-  max-width: 32rem;
+  max-width: 35rem;
   text-align: left;
 }
 
@@ -57,7 +57,7 @@ pre {
 
 .pic img {
   border: 2px solid white;
-  animation: switch 0.25s cubic-bezier(.40,.60,1,.70);
+  animation: switch 0.25s cubic-bezier(0,0,.5,1);
 }
 
 .pic-main {
